--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
     "@nestjs/mapped-types": "^0.3.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/swagger": "^4.7.16",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "joi": "^17.4.0",
     "mongodb": "^4.10.0",
+    "mongoose": "^5.11.20",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.5.7",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
