--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/mapped-types": "^0.3.0",
     "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/swagger": "^4.7.16",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "joi": "^17.4.0",
     "mongodb": "^4.10.0",
     "mongoose": "^5.11.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
@@ -42,10 +46,12 @@
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.31",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
