--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^0.3.0",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^9.0.0",
@@ -36,6 +37,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^5.11.20",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +53,7 @@
     "@types/jest": "^26.0.20",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.31",
+    "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
